GNOME Bugzilla – Bug 721713
The positions of the buttons in the headerbar is wrong
Last modified: 2014-01-07 21:02:50 UTC
After the following commit in gtk+, the positions of the buttons in the headerbar is wrong: https://git.gnome.org/browse/gtk+/commit/?id=c3e91c70317b337c72282a1aad68fc82a82bf9e9
Created attachment 265544 [details] [review] ephy-toolbar: Fix item positions
Review of attachment 265544 [details] [review]: Do we need to bump the GTK+ version required? Will this break with an older GTK+ version?
(In reply to comment #2) > Review of attachment 265544 [details] [review]: > > Do we need to bump the GTK+ version required? Will this break with an older > GTK+ version? I attached bump to 3.11.4 in the patch.
Review of attachment 265544 [details] [review]: Pushed as 007e6de - ephy-toolbar: Fix item positions