ephy-toolbar: Fix item positions

Also bump GTK+ dependency to 2.1.4.

https://bugzilla.gnome.org/show_bug.cgi?id=721713